Add test form Move2KubeUtils.getPath method
Signed-off-by: Gloria Ciavarrini <gciavarrini@redhat.com>