@@ -13,7 +13,7 @@ public abstract class Move2KubeUtils {
 
 	public static String getPath(String server, String workspaceID, String projectID, String outputID)
 			throws URISyntaxException {
-		String path = String.format("/workspaces/%s/projects/%s/outputs/%s", workspaceID, projectID, outputID);
+		String path = "/workspaces/%s/projects/%s/outputs/%s".formatted(workspaceID, projectID, outputID);
 		URI baseUri = new URI(server);
 		return new URI(baseUri.getScheme(), baseUri.getAuthority(), path, null, null).getPath();
 	}
